# cnschn-video

./: .env-example  .gitignore  README.md  build.py  cli.py  main.py  preprocess.sh  pyproject.toml
cnschn_video/: config.py  render.py
static/: style.css
templates/: base.html  index.html  video.html
