[project]
name = "cnschn-video"
version = "0.1.0"
description = "Tooling to statically render my videos website"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click>=8.1.8",
    "fastapi[standard]>=0.115.9",
    "jinja2>=3.1.5",
    "mistune>=3.1.2",
    "pydantic-settings>=2.8.1",
    "requests>=2.32.3",
]

[tool.pyright]
venvPath = "."
venv = ".venv"
